--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,47 @@
 # Python-generated files
 __pycache__/
 *.py[oc]
+*$py.class
 build/
 dist/
 wheels/
 *.egg-info
+.eggs/
 
 # Virtual environments
 .venv
 .env
+.env.*
+venv/
+
+# Byte-compiled / cache
+.python-version
+.mypy_cache/
+.pytest_cache/
+.dmypy.json
+
+# Coverage / test
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+pytest-debug.log
+
+# Logs
+logs/
+*.log
+
+# IDE / editor
+.vscode/
+.idea/
+
+# Frontend artifacts
+frontend/node_modules
+frontend/dist
+frontend/.dist
+frontend/vite-cache
+
+# Misc
+.DS_Store
+Thumbs.db
