Update dependencies and project configuration
- Frontend dependencies:
  - Add marked and @types/marked for markdown processing
  - Update package-lock.json with resolved dependencies

- Python project configuration:
  - Update pyproject.toml with additional dependencies
  - Configure development and production environments

- Maintenance:
  - Lock file updates for security and consistency
  - Ensure compatible version ranges
  - Support for new chat management features

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "crawl4ai>=0.7.3",
     "smolagents[gradio,litellm,mcp]",
     "streamlit>=1.47.0",
+    "starlette",
+    "uvicorn",
+    "python-dotenv",
 ]
 
 
