--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/marked": "^5.0.2",
     "clsx": "^2.1.1",
+    "marked": "^16.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
