Add example configuration and update config handling
- Introduced `config/default.example.yaml` for user overrides.
- Updated `.gitignore` to include `config/default.yaml`.
- Refactored `Config` class to `ConfigModel` with Pydantic for validation.
- Adjusted agent creation logic to utilize new configuration structure.
- Updated MCP routes to use new configuration model.
- Added `pydantic` as a dependency in `pyproject.toml` and `uv.lock`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "suzent"
 version = "0.1.0"
-description = "Add your description here"
+description = "Your personal Agent"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -15,6 +15,7 @@ dependencies = [
     "uvicorn",
     "python-dotenv",
     "loguru>=0.7.0",
+    "pydantic>=2.0",
     "markitdown[all]",
 ]
 
