feat: Implement memory management system with PostgreSQL and LiteLLM embeddings
- Added EmbeddingGenerator class for generating embeddings using LiteLLM.
- Created MemoryManager class to handle core and archival memory operations.
- Implemented PostgresMemoryStore for managing memory data in PostgreSQL with pgvector support.
- Defined schema.sql for initializing memory system tables in PostgreSQL.
- Developed memory tools for agents, including memory search and block update functionalities.
- Added error handling and logging throughout the memory management process.

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@
 # Web Search Configuration
 # ============================================
 
-# SearXNG Base URL (optional)
-# If set, WebSearch tool will use SearXNG for privacy-focused meta-search
-# If not set, it will use the default smolagents WebSearchTool
-# SEARXNG_BASE_URL=http://localhost:8080
+# SearXNG Configuration (used by Docker Compose and WebSearchTool)
+SEARXNG_BASE_URL=http://127.0.0.1:2077
+# Generate with: openssl rand -hex 32
+SEARXNG_SECRET=searxng_generated_secret_here
 
 # ============================================
 # API Keys Configuration
