--- a/docker/sandbox-compose.yml
+++ b/docker/sandbox-compose.yml
@@ -4,7 +4,10 @@
 services:
   microsandbox:
     container_name: suzent-microsandbox
-    image: rust:1.83-bookworm
+    image: suzent-microsandbox:latest
+    build:
+      context: .
+      dockerfile: microsandbox.Dockerfile
     privileged: true
     network_mode: host  # Required for microVM portal communication
     # NOTE: When using Windows + WSL2, you must use WSL2's IP address
@@ -21,14 +24,6 @@ services:
     working_dir: /workspace
     environment:
       - RUST_LOG=${RUST_LOG:-info}
-    command: >
-      bash -c "
-        apt-get update -qq &&
-        apt-get install -y -qq curl git build-essential libssl-dev pkg-config &&
-        curl -sSL https://raw.githubusercontent.com/zerocore-ai/microsandbox/refs/heads/main/scripts/install_microsandbox.sh | sh &&
-        export PATH=\"$$HOME/.local/bin:$$PATH\" &&
-        msb server start --host 0.0.0.0 --port 7263 --dev
-      "
     restart: unless-stopped
 
 volumes:
