--- a/docker/sandbox-compose.yml
+++ b/docker/sandbox-compose.yml
@@ -25,6 +25,11 @@ services:
     environment:
       - RUST_LOG=${RUST_LOG:-info}
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   microsandbox-data:
