--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "${POSTGRES_PORT:-5430}:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql
       - ../src/suzent/memory/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
     networks:
       - suzent-network
