update the chats.db path for docker compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - POSTGRES_PORT=5432
       - SEARXNG_BASE_URL=http://searxng:8080
       - REDIS_URL=redis://redis:6379
+      - CHATS_DB_PATH=/app/data/chats/chats.db
     depends_on:
       postgres:
         condition: service_healthy
@@ -26,7 +27,7 @@ services:
       # Mount data volume for local files/sandboxes if needed
       - ../data:/app/data
       - ../config:/app/config
-      - ../chats.db:/app/chats.db
+      - chats-data:/app/data/chats  # Use named volume for database persistence
 
   # React Frontend (Nginx)
   frontend:
@@ -141,4 +142,6 @@ volumes:
   redis-data:
     driver: local
   searxng-data:
+    driver: local
+  chats-data:
     driver: local
