update gemini 3 in default example

--- a/config/default.example.yaml
+++ b/config/default.example.yaml
@@ -5,10 +5,11 @@
 
 MODEL_OPTIONS:
   - "anthropic/claude-sonnet-4-20250514"
+  - "deepseek/deepseek-chat"
+  - "gemini/gemini-3-pro-preview"
   - "gemini/gemini-2.5-flash"
   - "gemini/gemini-2.5-pro"
   - "openai/gpt-5.1"
-  - "deepseek/deepseek-chat"
 
 # Tools to enable by default (these names must match Tool class names)
 DEFAULT_TOOLS:
