--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ Thumbs.db
 # Config
 config/default.yaml
 
-# Sandbox session data
-sandbox-data/
+# Persisted data (chats, sandbox sessions, etc.)
+data/
 
 # Docker compose overrides
 *.override.yml
