--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,9 +18,7 @@ services:
       - CHATS_DB_PATH=/app/data/chats/chats.db
       - SANDBOX_DATA_PATH=/app/data/sandbox-data
       - LANCEDB_URI=/app/data/memory
-    depends_on:
-      redis:
-        condition: service_healthy
+
     volumes:
       # Mount data volume for persistent storage (LanceDB, chats, sandboxes)
       - ../data:/app/data
@@ -45,6 +43,7 @@ services:
     image: docker.io/valkey/valkey:8-alpine
     command: valkey-server --save 30 1 --loglevel warning
     restart: unless-stopped
+    profiles: [ "searxng" ]
     networks:
       - suzent-network
     volumes:
@@ -68,6 +67,7 @@ services:
   searxng:
     container_name: suzent-searxng
     image: docker.io/searxng/searxng:latest
+    profiles: [ "searxng" ]
     restart: unless-stopped
     networks:
       - suzent-network
