feat: Initial Desktop App implementation with API path fixes

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,16 @@ logs/
 .vscode/
 .idea/
 
+# Node.js / npm
+node_modules/
+**/node_modules/
+package-lock.json
+**/package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Frontend artifacts
-frontend/node_modules
 frontend/dist
 frontend/.dist
 frontend/vite-cache
@@ -46,6 +54,13 @@ frontend/vite-cache
 *.db
 *.sqlite
 *.sqlite3
+
+# Tauri build artifacts
+src-tauri/target/
+src-tauri/binaries/
+
+# Rust
+Cargo.lock
 
 # Generated plan files (optional - remove this line if you want to track TODO.md)
 TODO.md
