allow file drag and drop

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/typography": "^0.5.16",
+    "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.6.0",
+    "@tauri-apps/plugin-fs": "^2.4.5",
     "@types/marked": "^5.0.2",
     "clsx": "^2.1.1",
     "marked": "^16.4.0",
