--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,14 +8,11 @@ authors = ["SUZENT Team"]
 tauri-build = { version = "2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0", features = ["devtools"] }
+tauri = { version = "2.0", features = [] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-shell = "2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["blocking"] }
-tauri-plugin-fs = "2.4.5"
+tauri-plugin-fs = "2.0"
 
-[features]
-default = ["custom-protocol"]
-custom-protocol = ["tauri/custom-protocol"]
