update setup and uninstall script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,12 @@ dependencies = [
     "lancedb>=0.17.0",
     "ddgs>=9.10.0",
     "sqlmodel>=0.0.22",
+    "typer>=0.9.0",
 ]
+
+[project.scripts]
+suzent = "suzent.cli:app"
+
 
 [project.optional-dependencies]
 # Kept for backwards compatibility, but memory is now required
