chore: release v0.1.3 (fix build workflow)

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install nuitka orderedset zstandard
-          pip install -r requirements.txt
+          pip install nuitka ordered-set zstandard
+          pip install .
 
       - name: Install Tauri CLI
         run: cargo install tauri-cli --version '^2.0.0'
