update change log and make bash a normal tool

--- a/config/default.example.yaml
+++ b/config/default.example.yaml
@@ -21,6 +21,7 @@ DEFAULT_TOOLS:
   - "EditFileTool"
   - "GlobTool"
   - "GrepTool"
+  - "BashTool"
 
 MCP_URLS:
   "HF Space MCP": "https://evalstate-hf-mcp-server.hf.space/mcp"
