--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "ddgs>=9.10.0",
     "sqlmodel>=0.0.22",
     "typer>=0.9.0",
+    "python-telegram-bot>=22.6",
 ]
 
 [project.scripts]
